chore: Add lockfile and .yml files to 2-space overrides

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,10 +8,10 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{package.json,lerna.json}]
+[{package.json,package-lock.json,lerna.json}]
 indent_style = space
 indent_size = 2
 
-[*.yaml]
+[*.yml,*.yaml]
 indent_style = space
 indent_size = 2
