--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "rollup-plugin-subpath-externals": "file:packages/rollup-plugin-subpath-externals"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^7.0.0-bridge.0",
     "chalk": "^2.4.1",
     "eslint": "^5.6.1",
     "eslint-plugin-node": "^7.0.1",
