--- a/packages/pectin-core/package.json
+++ b/packages/pectin-core/package.json
@@ -32,11 +32,11 @@
     "rollup": ">=0.65.0"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@pectin/babelrc": "file:../pectin-babelrc",
-    "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-core": "^7.0.0-bridge.0",
     "load-json-file": "^4.0.0",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-main-entry": "file:../rollup-plugin-main-entry",
