--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
+    "builtin-modules": "^3.0.0",
     "chalk": "^2.4.1",
     "eslint": "^5.6.1",
     "eslint-plugin-node": "^7.0.1",
