--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-zillow": "^1.0.0",
     "jest": "^23.6.0",
     "lerna": "^3.4.3",
+    "p-map": "^2.0.0",
     "prettier": "^1.14.3",
     "rollup": "^0.66.5",
     "tacks": "^1.2.7",
