--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup-plugin-subpath-externals": "file:packages/rollup-plugin-subpath-externals"
   },
   "devDependencies": {
+    "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.1",
     "eslint": "^5.6.1",
     "eslint-plugin-node": "^7.0.1",
