--- a/packages/pectin-core/package.json
+++ b/packages/pectin-core/package.json
@@ -35,6 +35,7 @@
     "@pectin/babelrc": "file:../pectin-babelrc",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "dot-prop": "^4.2.0",
     "load-json-file": "^4.0.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.6",
