--- a/packages/pectin-core/package.json
+++ b/packages/pectin-core/package.json
@@ -37,6 +37,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "dot-prop": "^4.2.0",
     "load-json-file": "^4.0.0",
+    "p-map": "^2.0.0",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-json": "^3.0.0",
