--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "builtin-modules": "^3.0.0",
+    "camelcase": "^5.0.0",
     "chalk": "^2.4.1",
     "eslint": "^5.6.1",
     "eslint-plugin-node": "^7.0.1",
