--- a/packages/pectin-core/package.json
+++ b/packages/pectin-core/package.json
@@ -35,8 +35,10 @@
     "@babel/core": "^7.0.0",
     "@pectin/babelrc": "file:../pectin-babelrc",
     "babel-core": "^7.0.0-bridge.0",
+    "camelcase": "^5.0.0",
     "dot-prop": "^4.2.0",
     "load-json-file": "^4.0.0",
+    "npm-package-arg": "^6.1.0",
     "p-map": "^2.0.0",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.6",
@@ -44,6 +46,7 @@
     "rollup-plugin-main-entry": "file:../rollup-plugin-main-entry",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-subpath-externals": "file:../rollup-plugin-subpath-externals",
-    "rollup-plugin-svg": "^1.0.1"
+    "rollup-plugin-svg": "^1.0.1",
+    "rollup-plugin-terser": "^3.0.0"
   }
 }
