--- a/packages/pectin-core/package.json
+++ b/packages/pectin-core/package.json
@@ -45,6 +45,7 @@
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-main-entry": "file:../rollup-plugin-main-entry",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-subpath-externals": "file:../rollup-plugin-subpath-externals",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^3.0.0"
