--- a/packages/pectin-babelrc/package.json
+++ b/packages/pectin-babelrc/package.json
@@ -30,6 +30,7 @@
     "rollup-plugin-babel": "^4.0.1"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "cosmiconfig": "^5.0.6"
   }
