--- a/packages/pectin-core/package.json
+++ b/packages/pectin-core/package.json
@@ -42,6 +42,7 @@
     "p-map": "^2.0.0",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-inject": "^2.2.0",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-main-entry": "file:../rollup-plugin-main-entry",
     "rollup-plugin-node-resolve": "^3.3.0",
