--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lerna": "^3.13.4",
     "p-map": "^2.1.0",
     "prettier": "^1.17.0",
+    "prettier-config-zillow": "^1.1.0",
     "rollup": "^1.11.0",
     "tacks": "^1.3.0",
     "tempy": "^0.2.1",
