--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/evocateur/pectin.git"
   },
   "scripts": {
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/ --ignore-path .gitignore .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint --ignore-path .gitignore .",
     "pretest": "npm run lint",
     "test": "jest --coverage"
   },
