--- a/package.json
+++ b/package.json
@@ -22,6 +22,18 @@
     "pretest": "npm run lint",
     "test": "jest --coverage"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "jest --find-related-tests",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@pectin/api": "file:packages/pectin-api",
     "@pectin/babelrc": "file:packages/pectin-babelrc",
@@ -42,8 +54,10 @@
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-zillow": "^3.3.2",
+    "husky": "^3.0.2",
     "jest": "^24.8.0",
     "lerna": "^3.16.4",
+    "lint-staged": "^9.2.1",
     "p-map": "^3.0.0",
     "prettier": "^1.18.2",
     "prettier-config-zillow": "^1.1.1",
