--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
+    "@babel/runtime-corejs2": "^7.5.5",
+    "@babel/runtime-corejs3": "^7.5.5",
     "babel-core": "^7.0.0-bridge.0",
     "builtin-modules": "^3.1.0",
     "camelcase": "^5.3.1",
@@ -61,6 +64,7 @@
     "p-map": "^3.0.0",
     "prettier": "^1.18.2",
     "prettier-config-zillow": "^1.1.1",
+    "resolve-from": "^5.0.0",
     "rollup": "^1.19.3",
     "tacks": "^1.3.0",
     "tempy": "^0.3.0",
