--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rollup": "^1.23.1",
     "tacks": "^1.3.0",
     "tempy": "^0.3.0",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "yargs": "^14.2.0"
   }
 }
