--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@babel/runtime": "^7.6.3",
     "@babel/runtime-corejs2": "^7.6.3",
     "@babel/runtime-corejs3": "^7.6.3",
+    "@lerna/project": "^3.18.0",
+    "@lerna/run-topologically": "^3.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "builtin-modules": "^3.1.0",
     "camelcase": "^5.3.1",
@@ -59,7 +61,7 @@
     "eslint-plugin-zillow": "^3.5.1",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
-    "lerna": "^3.17.0",
+    "lerna": "^3.18.1",
     "lint-staged": "^9.4.2",
     "p-map": "^3.0.0",
     "prettier": "^1.18.2",
