--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "tacks": "^1.3.0",
     "tempy": "^0.3.0",
     "touch": "^3.1.0",
+    "typescript": "^3.7.2",
     "yargs": "^14.2.0"
   }
 }
