--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@babel/runtime-corejs3": "^7.6.3",
     "@lerna/project": "^3.18.0",
     "@lerna/run-topologically": "^3.18.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "babel-core": "^7.0.0-bridge.0",
     "builtin-modules": "^3.1.0",
     "camelcase": "^5.3.1",
