--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/runtime-corejs3": "^7.6.3",
     "@lerna/project": "^3.18.0",
     "@lerna/run-topologically": "^3.18.0",
+    "@types/jest": "^24.0.22",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "babel-core": "^7.0.0-bridge.0",
@@ -73,6 +74,7 @@
     "tacks": "^1.3.0",
     "tempy": "^0.3.0",
     "touch": "^3.1.0",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.7.2",
     "yargs": "^14.2.0"
   }
