chore: Add relative references to leaf tsconfig
Used https://gist.github.com/evocateur/9ab014add6744046ff82487de98e63ba

--- a/packages/pectin-core/tsconfig.json
+++ b/packages/pectin-core/tsconfig.json
@@ -6,5 +6,16 @@
   },
   "include": [
     "lib/**/*"
+  ],
+  "references": [
+    {
+      "path": "../pectin-babelrc"
+    },
+    {
+      "path": "../rollup-plugin-main-entry"
+    },
+    {
+      "path": "../rollup-plugin-subpath-externals"
+    }
   ]
 }
