--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -5,8 +5,7 @@
         "module": "commonjs",
         "lib": ["es2017"],
         "allowJs": true,
-        // TODO: enable
-        // "checkJs": true,
+        "checkJs": true,
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
