--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -14,6 +14,8 @@
 
         /* Strict Type-Checking Options */
         "strict": true,
+        // TODO: fix implicit 'any'
+        "noImplicitAny": false,
 
         /* Additional Checks */
         // "noUnusedLocals": true,                /* Report errors on unused locals. */
