--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -18,10 +18,10 @@
         "noImplicitAny": false,
 
         /* Additional Checks */
-        // "noUnusedLocals": true,                /* Report errors on unused locals. */
-        // "noUnusedParameters": true,            /* Report errors on unused parameters. */
-        // "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
-        // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
+        "noUnusedLocals": true,                /* Report errors on unused locals. */
+        "noUnusedParameters": true,            /* Report errors on unused parameters. */
+        "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
+        "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
         /* Module Resolution Options */
         "moduleResolution": "node",
