--- a/packages/rollup-plugin-subpath-externals/package.json
+++ b/packages/rollup-plugin-subpath-externals/package.json
@@ -11,9 +11,9 @@
   "author": "Daniel Stockman <daniel.stockman@gmail.com>",
   "homepage": "https://github.com/evocateur/pectin/tree/latest/packages/rollup-plugin-subpath-externals#readme",
   "license": "ISC",
-  "main": "lib/rollup-plugin-subpath-externals.js",
+  "main": "dist/rollup-plugin-subpath-externals.js",
   "files": [
-    "lib"
+    "dist"
   ],
   "engines": {
     "node": ">=8.9"
