--- a/packages/rollup-plugin-main-entry/package.json
+++ b/packages/rollup-plugin-main-entry/package.json
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/evocateur/pectin/tree/latest/packages/rollup-plugin-main-entry#readme",
   "license": "ISC",
   "main": "dist/rollup-plugin-main-entry.js",
+  "types": "dist/rollup-plugin-main-entry.d.ts",
   "files": [
     "dist"
   ],
