--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/evocateur/pectin.git"
   },
   "scripts": {
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint --ignore-path .gitignore .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint --ignore-path .gitignore --ext js,ts .",
     "pretest": "npm run lint",
     "test": "jest --coverage"
   },
@@ -62,6 +62,7 @@
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "eslint": "^6.5.1",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-zillow": "^3.5.1",
     "husky": "^3.0.9",
