--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/runtime-corejs3": "^7.6.3",
     "@lerna/project": "^3.18.0",
     "@lerna/run-topologically": "^3.18.0",
+    "@schemastore/package": "^0.0.5",
     "@types/clone-deep": "^4.0.1",
     "@types/cosmiconfig": "^5.0.3",
     "@types/jest": "^24.0.22",
