--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "url": "git+https://github.com/evocateur/pectin.git"
   },
   "scripts": {
+    "prepare": "npm run build",
+    "build": "tsc -b",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint --ignore-path .gitignore --ext js,ts .",
     "pretest": "npm run lint",
     "test": "jest --coverage"
