--- a/packages/pectin-babelrc/package.json
+++ b/packages/pectin-babelrc/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@schemastore/package": "^0.0.5",
     "clone-deep": "^4.0.1",
     "cosmiconfig": "^5.2.0",
     "resolve-from": "^5.0.0"
