--- a/packages/pectin-core/package.json
+++ b/packages/pectin-core/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@pectin/babelrc": "file:../pectin-babelrc",
+    "@schemastore/package": "^0.0.5",
     "babel-core": "^7.0.0-bridge.0",
     "camelcase": "^5.0.0",
     "dot-prop": "^5.1.0",
