--- a/packages/rollup-plugin-subpath-externals/package.json
+++ b/packages/rollup-plugin-subpath-externals/package.json
@@ -30,6 +30,7 @@
     "rollup": ">=1.0.0"
   },
   "dependencies": {
+    "@schemastore/package": "^0.0.5",
     "builtin-modules": "^3.0.0",
     "dot-prop": "^5.1.0"
   }
