--- a/packages/pectin-babelrc/package.json
+++ b/packages/pectin-babelrc/package.json
@@ -28,6 +28,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "peerDependencies": {
+    "rollup": ">=1.12.0",
     "rollup-plugin-babel": "^4.2.0"
   },
   "dependencies": {
