chore(lint): Turn off silly max-len rule

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -10,6 +10,8 @@
   plugins:
     - node
   rules:
+    # prettier handles max-len fine
+    max-len: "off"
     no-restricted-syntax:
       - error
       - ForInStatement
