--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -37,10 +37,12 @@
   overrides:
     - files:
         - "packages/*/test/**"
+      env:
+        jest: true
       rules:
         # dev dependencies are hoisted to the root
-        zillow/import/no-extraneous-dependencies: off
-        node/no-extraneous-require: off
+        zillow/import/no-extraneous-dependencies: "off"
+        node/no-extraneous-require: "off"
     - files: '*.ts'
       parser: '@typescript-eslint/parser'
       plugins:
