--- a/packages/pectin/package.json
+++ b/packages/pectin/package.json
@@ -39,5 +39,8 @@
     "resolve-from": "^5.0.0",
     "rollup": "^1.23.1",
     "yargs": "^14.2.0"
+  },
+  "devDependencies": {
+    "ts-jest": "^24.2.0"
   }
 }
