--- a/packages/rollup-plugin-subpath-externals/package.json
+++ b/packages/rollup-plugin-subpath-externals/package.json
@@ -33,5 +33,8 @@
     "@schemastore/package": "^0.0.5",
     "builtin-modules": "^3.0.0",
     "dot-prop": "^5.1.0"
+  },
+  "devDependencies": {
+    "ts-jest": "^24.2.0"
   }
 }
