--- a/packages/pectin-babelrc/package.json
+++ b/packages/pectin-babelrc/package.json
@@ -43,6 +43,7 @@
     "@babel/runtime": "^7.7.4",
     "@babel/runtime-corejs2": "^7.7.4",
     "@babel/runtime-corejs3": "^7.7.4",
+    "tacks": "^1.3.0",
     "ts-jest": "^24.2.0"
   }
 }
