--- a/packages/pectin-babelrc/package.json
+++ b/packages/pectin-babelrc/package.json
@@ -44,6 +44,7 @@
     "@babel/runtime-corejs2": "^7.7.4",
     "@babel/runtime-corejs3": "^7.7.4",
     "tacks": "^1.3.0",
+    "tempy": "^0.3.0",
     "ts-jest": "^24.2.0"
   }
 }
