chore: Correct yaml glob

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,6 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
-[*.yml,*.yaml]
+[{*.yml,*.yaml}]
 indent_style = space
 indent_size = 2
