feat(babelrc): Upgrade cosmiconfig

--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@lerna/run-topologically": "^3.18.5",
     "@schemastore/package": "^0.0.5",
     "@types/clone-deep": "^4.0.1",
-    "@types/cosmiconfig": "^5.0.3",
     "@types/jest": "^24.0.23",
     "@types/npm-package-arg": "^6.1.0",
     "@types/npmlog": "^4.1.2",
@@ -71,6 +70,7 @@
     "builtin-modules": "^3.1.0",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
+    "cosmiconfig": "^6.0.0",
     "eslint": "^6.7.2",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-node": "^10.0.0",
